2000-07-13  Yoshinari Nomura  <nom@quickhack.net>

	* make.rb.in, configure.rb, 
	  ruby-ext/lib/make.RB.in, ruby-ext/make.rb.in:
	change newline CRLF -> LF.

	* 00readme.jis: fix typo.

	* ruby-ext/extconf.rb: add LD_RUN_PATH.
	check exsitance of pilot-link and make a safe Makefile.

	* today: Removed.

2000-07-13  MIYOSHI Masanori  <miyoshi@ask.ne.jp>

	* ruby-ext/lib/mhc-kconv.rb.in: Renamed from today and modified
	for make.

	* today.in: Ditto.

	* palm2mhc.in: Ditto.

	* mhc2palm.in: Ditto.

	* mhc-sync.in: Ditto.

	* gemcal.in: Ditto.

	* adb2mhc.in: Ditto.

	* ruby-ext/lib/make.RB.in: New file for make.

	* ruby-ext/make.rb.in: Ditto.

	* make.rb.in: Ditto.

	* configure.rb: New file for configuration.

2000-07-11  MIYOSHI Masanori  <miyoshi@ask.ne.jp>

	* 00readme.w32.jis: Update info of the ruby binary release.
	Remove pilot-link.0.9.3.cygwin1.1.diff from the file.

	* ruby-ext/lib/mhc-kconv.rb: Assume default kanji code sjis when
	the platform matches cygwin, mingw32, os2_emx or sharp-human.

2000-07-10  Toshihiko SHIMOKAWA  <toshi@tea.forus.or.jp>

	* today : Change help message of --format.
	Remove code conversion at final display.  Now, every formatter
	module is responsible to code conversion.
	
	* ruby-ext/lib/mhc-kconv.rb : Change to module.
	Add tohtml, tops for formatter module of 'today'.
		
	* gemcal : Change some global variables to local variables.

2000-07-08  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-logic.el (mhc-logic/compile-schedule): Fix
	inconsistency after compile of schedule predicate.

2000-07-07  Yoshinari Nomura  <nom@quickhack.net>

	* today: add location to each summary line.

	* emacs/mhc-logic.el (mhc-logic-occur-multiple-p):
	roughly check not to delete multiple article.

2000-07-07  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-vars.el (mhc-default-coding-system):
	Changed default value from 'iso-2022jp' to 'iso-2022-7bit-ss2'.

2000-07-07  Yuuichi Teranishi  <teranisi@quickhack.net>
